--- a/corgi/homepage/templates/homepage.html
+++ b/corgi/homepage/templates/homepage.html
@@ -48,7 +48,7 @@
         <img src="{% static 'media/corgi_homepage.png'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
             <div class="d-grid gap-2 col-6 mx-auto" style="position: absolute;top: 70%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%); ">
                 <button onclick="location.href='/store'"
-                style="background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;  type="button">
+                style="background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;" type="button">
                     Customer</button>
                 <button onclick="location.href='/seller/login'"
                 style='background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;' type="button">
