--- a/corgi/seller/templates/seller_product.html
+++ b/corgi/seller/templates/seller_product.html
@@ -1,29 +1,78 @@
-{% extends "homepage.html" %}
-{% block nav %}
-{% endblock %}
-<div class="row">
-    <div class="col-md-2">
-        <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'seller_product' %}" style="color: #595959;">Manage my profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'seller_product' %}" style="color: #595959;">Manage my store</a>
-            </li>
-        </ul>
-    </div>
-</div>
+{% load static %}
+
+<!DOCTYPE html>
+<style>
+  body {
+  position: absolute;
+  top: 18%;
+  width: 30%;
+  height: 20%;
+  left: 5%;
+}
+</style>
+<html>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<head>
+    <title>Seller Site</title>
+    <nav class="navbar bg-body-tertiary fixed-top">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="/" style="font-weight:bold; color: #ec9410;">
+            Corgi Store
+            <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
+          </a>
+          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h3 class="offcanvas-title" id="offcanvasNavbarLabel">Seller Menu</h3>
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+          
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">My Profile Setting</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Manage My Store</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Inbox</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Order Status</a>
+                </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+</head>
+
+
 {% block content %}
 <div class="card-footer">
     <p class="card-text">
-        <button type="submit" class="btn btn-sm btn-success float-right" style="font-size: 12px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Add Product</button>
+        <button type="button" class="btn btn-secondary btn-sm" style="background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Edit Product</button>
+        <button type="button" class="btn btn-secondary btn-sm" style=" background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Delete Product</button>
     </p>
   </div>
 
-    <div class="col-md-10">
-        <table class="table table-striped">
+
+    
+<div class="col-md-10">
+    <form method="POST">
+        {% csrf_token %}
+        <table class="table table-striped" style="width: 350%;">
             <thead>
                 <tr>
+                    <th scope="col"></th>
                     <th scope="col">Product</th>
                     <th scope="col">Image</th>
                     <th scope="col">Category</th>
@@ -34,6 +83,7 @@
             <tbody>
                 {% for product in products %}
                 <tr>
+                    <td><input type="checkbox" name="products[]" value="{{ product.id }}"></td>
                     <td>{{ product.name }}</td>
                     <td><img src="{{ product.image.url }}" alt="{{ product.name }}" width="100" height="100"></td>
                     <td>{{ product.category }}</td>
@@ -43,5 +93,7 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
+    </form>
+</div>
 {% endblock %}
+
