--- a/corgi/buyer/templates/cart.html
+++ b/corgi/buyer/templates/cart.html
@@ -1,109 +1,82 @@
-{% comment %} {% extends 'base.html' %} {% endcomment %}
+{% extends 'store base.html' %}
 
 
 {% block content %}
 {% load cart %}
-{% load custom_filter %}
+{% load customer_filter %}
+
 <div class="container">
   <div class="border rounded p-4 m-4">
-    <marquee class="alert alert-danger rounded-pill" style="text-align:center"
-      behavior="scroll" direction="left">Please revised your checkout cart before
-      making a payment. Our website has no refund and cancellation policy for
-      any orders. Thanks for your cooperation. PMN FigureStore Team</marquee>
-    <hr>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Items</th>
-          <th>Image</th>
-          <th>Product</th>
-          <th>Price</th>
-          <th>Quantity</th>
-          <th>Total</th>
-        </tr>
-      </thead>
-      <tbody>
-
-        {% for product in products %}
-        <tr>
-          <td>{{forloop.counter}}</td>
-          <td><img style="height: 80px;" class="rounded-circle"
-              src="{{product.image.url}}" alt=""></td>
-          <td>{{product.name}}</td>
-          <td>{{product.price|currency}}</td>
-          <td>{{product|cart_quantity:request.session.cart}}</td>
-          <td>{{product|price_total:request.session.cart|currency}}</td>
-        </tr>
-
-        {% endfor %}
-
-      </tbody>
-
-      <tfoot>
-        <tr>
-          <th colspan="4"></th>
-          <th class="" colspan="">Total</th>
-          <th>{{products|total_cart_price:request.session.cart|currency}}</th>
-        </tr>
-      </tfoot>
-    </table>
-    <hr>
-    <div class="m-3 p-3">
-      <a href="#" data-toggle="modal" data-target="#exampleModal" class="btn
-        btn-outline-success border rounded col-lg-3 float-right">Check out</a>
-    </div>
-  </div>
-</div>
-
-
-<!-- modal -->
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-  aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">
-          Check Out Form
-        </h5>
+        <p class="display-4 pl-4 ml-4">Your Cart</p>
         <hr>
-        <button type="button" class="close" data-dismiss="modal"
-          aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="m-2 p-3">
-          <form action="/buyers/check-out" method="POST">
-            {% csrf_token %}
-            <p class="alert alert-secondary rounded-pill">
-              Please note that the address and phone number provided in this pop-up should be the contact information for the person who will be available to 
-              receive the packages from us. If there is no recipient and the packages are returned, we will not issue any refunds.
-            </p> <br/>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Sno.</th>
+                    <th>Image</th>
+                    <th>Product</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                
+                {% for product in products %}
+                <tr>
+                    <td>{{forloop.counter}}</td>
+                    <td><img style="height: 80px;" class="rounded-circle" src="{{product.image.url}}" alt=""></td>
+                    <td>{{product.name}}</td>
+                    <td>{{product.price}}</td>
+                    <td>{{product|cart_quantity:request.session.cart}}</td>
+                    <td>{{product|price_total:request.session.cart}}</td>
+                </tr>
 
-            <div class="form-group">
-              <label for="">Address</label>
-              <input type="text" name="address" id="" class="form-control"
-                placeholder="" aria-describedby="helpId">
+                {% endfor %}
 
-            </div>
-            <div class="form-group">
-              <label for="">Phone</label>
-              <input type="text" name="phone" id="" class="form-control"
-                placeholder="" aria-describedby="helpId">
-            </div>
+            </tbody>
 
-            <br>
-            <input type="submit" class="btn float-right btn-outline-success
-              col-lg-6" value="Check out">
-          </form>
+            <tfoot>
+                <tr>
+                    <th colspan="4"></th>
+                    <th class="" colspan="">Total</th>
+                    <th>{{products|total_cart_price:request.session.cart}}</th>
+                </tr>
+            </tfoot>
+        </table>
+        <hr>
+        <div class="m-3 p-3">
+            <a href="#" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-info border rounded  col-lg-3 float-right">Check out</a>
         </div>
-      </div>
-
-    </div>
   </div>
 </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">
+              Order Confirmation
+          </h5>
+          <hr>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="m-2 p-3">
+            <form action="/buyer/check-out" method="POST">
+                {% csrf_token %}
+
+                  <input type="submit" class="btn float-right btn-outline-info col-lg-6" value="Let's go">
+            </form>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
 
 
 
