--- a/corgi/buyer/templates/store_detail.html
+++ b/corgi/buyer/templates/store_detail.html
@@ -29,8 +29,9 @@
                             <p>{{ store.phone }}</p>
                             <hr>
                         <h5>Location:</h5>
-                            <p>{{ store.address }}</p>
+                            <p>{{ store.store_address }}</p>
             <hr>
+        <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;" data-bs-toggle="modal" data-bs-target="#Add-to-Cart-modal-{{ product.id }}">Contact Store</button>
       </div>
     </div>
   </div>
