--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -29,11 +29,11 @@
 </form>
 
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>cart</a>
+  <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>Cart</a>
 </li>
 
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959";>login</a>
+  <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959";>My Profile</a>
 </li>
 {% endblock %}
 
