--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -18,7 +18,7 @@
 </li>
 
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959";>login</a>
+  <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959";>My Profile</a>
 </li>
 {% endblock %}
 
