--- a/corgi/homepage/templates/homepage.html
+++ b/corgi/homepage/templates/homepage.html
@@ -50,7 +50,7 @@
                 <button onclick="location.href='/store'"
                 style="background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;" type="button">
                     Customer</button>
-                <button onclick="location.href='/seller/login'"
+                <button onclick="location.href='/seller'"
                 style='background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;' type="button">
                     Seller</button>
     </div>
