--- a/corgi/seller/templates/Sbase.html
+++ b/corgi/seller/templates/Sbase.html
@@ -30,10 +30,10 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">My Profile Setting</a>
+                  <a class="nav-link active" aria-current="page" href="">My Profile Setting</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Manage My Store</a>
+                  <a class="nav-link" href="/seller/products">Manage My Store</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Inbox</a>
@@ -50,11 +50,12 @@
       </nav>
 </head>
 <body>
+{% block content %}
   <p style="position: absolute;top: 45%;left: 27%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">Let's make corgi products a love</p>
   <p style="position: absolute;top: 55%;left: 25%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">at first sight experience for everyone!</p>
   <img src="{% static 'media/first.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
-</html><body>
-
+{% endblock %}
+</body>
 </html>
 
 
