--- a/corgi/seller/templates/edit_profile.html
+++ b/corgi/seller/templates/edit_profile.html
@@ -1,8 +1,6 @@
+{% extends "Sbase.html" %}
+
 {% block content %}
-  <h2>Edit Seller Profile</h2>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Save Changes</button>
-  </form>
+  <h1 style="color: black;">Edit Seller Profile</h1>
+
 {% endblock %}
