--- a/corgi/buyer/templates/cart.html
+++ b/corgi/buyer/templates/cart.html
@@ -1,93 +1,188 @@
+{% load static %}
+
+<!DOCTYPE html>
+<style>
+  body {
+  position: absolute;
+  top: 18%;
+  width: 30%;
+  height: 20%;
+  left: 5%;
+}
+</style>
+<html>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<head>
+    <title>Seller Site</title>
+    <nav class="navbar bg-body-tertiary fixed-top">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="/" style="font-weight:bold; color: #ec9410;">
+            Corgi Store
+            <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
+          </a>
+          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h3 class="offcanvas-title" id="offcanvasNavbarLabel">Seller Menu</h3>
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+          
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">My Profile Setting</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Manage My Store</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Inbox</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Order Status</a>
+                </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+</head>
+
 <!DOCTYPE html>
 <html>
-<head>
-    <title>My Cart</title>
+  <head>
     <style>
-        body{
-            margin: 0;
-            padding: 0;
-            background: #f8bc63;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+    .container {
+        display: flex;
+        justify-content: space-between;
         }
-        .Cart-Container{
-        width: 70%;
-        height: 85%;
-        background-color: #ffffff;
-        border-radius: 20px;
-        box-shadow: 0px 25px 40px #1687d933;
+
+    .quantity {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
         }
-        .Header{
-            margin: auto;
-            width: 90%;
-            height: 15%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+    .quantity p {
+          margin: 5px;
         }
-        .Heading{
-            margin-top: 20px;
-            font-size: 30px;
-            font-family: Arial, sans-serif;
-            font-weight: 700;
-            color: #2F3841;
+
+    .remove {
+          background-color: #f44336;
+          color: white;
+          border: none;
+          padding: 10px;
+          border-radius: 5px;
+          cursor: pointer;
+          margin-top: 20px;
         }
-        .Action{
-            font-size: 14px;
-            font-family: Arial, sans-serif;
-            font-weight: 600;
-            color: #E44C4C;
-            cursor: pointer;
-            border-bottom: 1px solid #E44C4C;
+        .checkout {
+          background-color: #f8bc63;
+          color: white;
+          border: none;
+          padding: 10px;
+          border-radius: 5px;
+          cursor: pointer;
+          margin-top: 20px;
         }
-        .Cart-Items{
-            margin: auto;
-            width: 90%;
-            height: 30%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .image-box{
-            width: 15%;
-            text-align: center;
-        }
-        .about{
-            height: 100%;
-        }
-        .title{
-            padding-top: 5px;
-            line-height: 10px;
-            font-size: 32px;
-            font-family: Arial, sans-serif;
-            font-weight: 800;
-            color: #202020;
-        }
-        .subtitle{
-            line-height: 10px;
-            font-size: 18px;
-            font-family: Arial, sans-serif;
-            font-weight: 600;
-            color: #909090;
-        }
-    </style>
-</head>
-<body>
-    <div class="Cart-Container">
-        <div class="Header">
-            <h1 class="Heading">Shopping Cart</h1>
-            <h5 class="Action">Remove all</h5>
-        </div>
-        <div class="body">
-            <h1>product</h1>
-            {% for cart in carts %}
-                <h2>{{ cart.product }}</h2>
-                <h2>{{ cart.price }}</h2>
-                <h2>{{ cart.amount }}</h2>
-            {% endfor %}
-        </div>
+
+.summary {
+    position: absolute;
+    top: 100;
+    right: 20;
+    }
+    td {
+  text-align: center;
+}
+
+
+      </style>
+      
+  </head>
+  <body>
+  <h1>Shopping Cart</h1>
+  <!-- <table class="table-striped" width="300%">
+    <thead>
+      <tr>
+        <th scope="col">Image</th>
+        <th scope="col">Product</th>
+        <th scope="col">Price/Unit</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Total Price</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for cart in carts %}
+      <tr>
+        <td><img src="{{ cart.product.image.url }}" alt="" width=100 height=auto></td>
+        <td>{{ cart.product }}</td>
+        <td>฿ {{ cart.product.price }}</td>
+        <td>
+          <div class="quantity">
+            <button class="decrease">-</button>
+            <p>{{ cart.amount }}</p>
+            <button class="increase">+</button>
+          </div>
+        </td>
+        <td>฿ {{ cart.price }}</td>
+        <td><button class="remove">Remove</button></td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table> -->
+
+  <div class="col-md-10">
+    <form method="POST">
+        {% csrf_token %}
+        <table class="table table-striped" style="width: 350%;">
+            <thead>
+                <tr>
+                    <th scope="col">Image</th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Price/Unit</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Total Price</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for cart in carts %}
+                    <tr>
+                        <td><img src="{{ cart.product.image.url }}" alt="" width=100 height=auto></td>
+                        <td>{{ cart.product }}</td>
+                        <td>฿ {{ cart.product.price }}</td>
+                        <td>
+                            <div class="quantity">
+                                <button class="decrease">-</button>
+                                <p>{{ cart.amount }}</p>
+                                <button class="increase">+</button>
+                            </div>
+                        </td>
+                        <td>฿ {{ cart.price }}</td>
+                        <td><button class="remove">Remove</button></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </form>
+</div>
+    <h3>Total (tax included)</h3> 
+    <h5>฿ {{ total }}</h5>
+    <button class="checkout">Go to Checkout</button>
     </div>
-</body>
+  </div>
+  
+  </body>
 </html>
+
+
+
+    
+
