--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -62,8 +62,9 @@
       <li class="list-group-item">Price: {{ product.price }} ฿</li>
       <li class="list-group-item">     
         {% if product.seller %}
-          <p>Store name: {{ product.seller.store_name }} Store</p>
-          <p>Address: {{ product.seller.store_address }}</p>
+          <p>Store name: {{ product.seller.store_name }} Store</p></li>
+          <li class="list-group-item">  
+          <p>Address: {{ product.seller.store_address }}</p></li>
         {% else %}
           <p>No seller information available</p>
         {% endif %}
