--- a/corgi/core/templates/register.html
+++ b/corgi/core/templates/register.html
@@ -9,7 +9,37 @@
           <h1 class="card-title text-center mb-4">Register</h1>
           <form method="POST" action="">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form.username.label_tag }}
+            {{ form.username }}
+            <br><br>
+            {{ form.first_name.label_tag }}
+            {{ form.first_name }}
+            <br><br>
+            {{ form.last_name.label_tag }}
+            {{ form.last_name }}
+            <br><br>
+            {{ form.phone.label_tag }}
+            {{ form.phone }}
+            <br><br>
+            {{ form.email.label_tag }}
+            {{ form.email }}
+            <br><br>
+            {{ form.address.label_tag }}
+            {{ form.address }}
+            <br><br>
+            {{ form.password1.label_tag }}
+            {{ form.password1 }}
+            <br><br>
+            <hr>
+            <p>About Your Password</p>
+            <p>1. Your password can’t be too similar to your other personal information.</p>
+            <p>2. Your password must contain at least 8 characters.</p>
+            <p>3. Your password can’t be a commonly used password.</p>
+            <p>4. Your password can’t be entirely numeric.</p>
+            <hr>
+            {{ form.password2.label_tag }}
+            {{ form.password2 }}
+            <br><br>
             <div class="d-flex justify-content-center">
               <button type="submit" class="btn btn-secondary" style="border-color: #ec9410; background-color: #ec9410;">Submit</button>
             </div>
