--- a/corgi/buyer/templates/checkout.html
+++ b/corgi/buyer/templates/checkout.html
@@ -41,6 +41,7 @@
 {% block content %}
 <div class="container">
   <h1>Checkout</h1>  
+  <br>
   <div class="row">
     <div class="col-md-6">
       <h2>Merchant Info:</h2>
@@ -57,6 +58,7 @@
   <hr>
 
   <h2>Order Details:</h2>
+  <br>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -84,11 +86,13 @@
   </table>
   <h3>Total (tax included) {{ total }}฿ </h3> 
   <hr>
-  <h4>Please Scan QR Code for Payment </h4> 
+  <br>
+  <h4>Please Scan QR Code for Payment </h4> <br>
   <img src="{{ qrcode_image.url }}" alt="QR Code" width="200" height="200">
 
   <hr>
   <h2>Upload Payment Receipt:</h2>
+  <br>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-group">
@@ -96,7 +100,7 @@
       <input type="file" name="receipt" class="form-control-file" id="receipt">
     </div>
   </form>
-
+<br>
   <a href="/" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:10px; width: 210px; position: relative; ">Confirm Payment</a>
 </div>
 {% endblock %}
