edit preofile ver.ร่าง

--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -6,10 +6,16 @@
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959";>Categories</a>
 </li>
-<li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Order Status</a>
+<li class="nav-item dropdown">
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Order Status
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <li><a class="dropdown-item" href="#">Pending</a></li>
+    <li><a class="dropdown-item" href="#">Completed</a></li>
+    <li><a class="dropdown-item" href="#">Cancelled</a></li>
+  </ul>
 </li>
-
 <li class="nav-item dropdown">
   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Chat with Corgi
@@ -25,7 +31,7 @@
 {% block right-nav%}
 <form class="d-flex" role="search" action="{% url 'search' %}">
   <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search" >
-  <button class="btn btn-outline-success" type="submit" >Search</button>
+  <button class="btn btn-outline-success" type="submit" style="color: #f8bc63; border-color: #f8bc63;">Search</button>
 </form>
 
 <li class="nav-item">
