--- a/corgi/buyer/templates/checkout.html
+++ b/corgi/buyer/templates/checkout.html
@@ -97,12 +97,27 @@
     {% csrf_token %}
     <div class="form-group">
       <label for="receipt">Upload Payment Receipt:</label>
-      <input type="file" name="receipt" class="form-control-file" id="receipt">
+      <input type="file" name="receipt" class="form-control-file" id="receipt" onchange="previewImage(event)">
     </div>
+    <div id="imagePreview"></div>
   </form>
 <br>
   <a href="/" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:10px; width: 210px; position: relative; ">Confirm Payment</a>
 </div>
+<script>
+  function previewImage(event)
+  {
+    var reader = new FileReader();
+    reader.onload = function()
+    {
+      var output = document.getElementById('imagePreview');
+      output.innerHTML = '<img src="' + reader.result + '" width="200" />';
+    }
+    reader.readAsDataURL(event.target.files[0]);
+  }
+  </script>
+
 {% endblock %}
+
 
 
