Seller Delete product complete

--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -70,7 +70,7 @@
         {% endif %}
       </li>
       </ul>
-      <a class="stretched-link" href="{{ product.name }}"></a>
+      <a class="stretched-link" href="/store/products/{{ product.id }}"></a>
     </div>
     </div>
   </div>
