--- a/corgi/seller/templates/add_product.html
+++ b/corgi/seller/templates/add_product.html
@@ -38,7 +38,7 @@
                   <a class="nav-link active" aria-current="page" href="#">My Profile Setting</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Manage My Store</a>
+                  <a class="nav-link" href="/seller/products">Manage My Store</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Inbox</a>
