--- a/corgi/seller/templates/seller_product.html
+++ b/corgi/seller/templates/seller_product.html
@@ -57,16 +57,37 @@
 
 
 {% block content %}
-<div class="card-footer">
+<form method="POST">
+  {% csrf_token %}
+  <div class="card-footer">
     <p class="card-text">
-        <a href="/seller/add-products/" class="btn btn-secondary btn-sm" style="background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Add Product</a>
-        <button type="submit" formaction="{% url 'delete_products' %}" class="btn btn-secondary btn-sm" style="background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Delete Product</button>
+        <a href="/seller/add-products/" class="btn btn-primary" style="background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Add Product</a>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteModal" style="background-color: #f8bc63; border-color:#f8bc63; padding:15px;">
+        {% comment %} <button type="submit" formaction="{% url 'delete_products' %}" class="btn btn-secondary btn-sm" style="background-color: #f8bc63; border-color:#f8bc63; padding:15px;"> {% endcomment %}
+          Delete Product</button>
+        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="deleteModal">Delete Product</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Are you sure?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
     </p>
   </div>
 
 
     
-<div class="col-md-10">
+  <div class="col-md-10">
     {% comment %} <form method="POST"> {% endcomment %}
         {% comment %} {% csrf_token %} {% endcomment %}
         <table class="table table-striped" style="width: 350%;">
@@ -94,6 +115,7 @@
             </tbody>
         </table>
     {% comment %} </form> {% endcomment %}
-</div>
+  </div>
+</form>
 {% endblock %}
 
