--- a/corgi/buyer/templates/checkout.html
+++ b/corgi/buyer/templates/checkout.html
@@ -59,12 +59,13 @@
 
   <h2>Order Details:</h2>
   <br>
-  <table class="table table-striped">
-    <thead>
+  <table class="table text-center">
+    <thead class="text-center">
       <tr>
+        <th>Image</th>
         <th>Product</th>
-        <th>Quantity</th>
         <th>Price/Unit</th>
+        <th>Quantity</th>
         <th>Total Price</th>
       </tr>
     </thead>
