--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -1,4 +1,5 @@
 {% extends "homepage.html" %}
+
 {% block nav %}
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
@@ -7,33 +8,20 @@
   <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959";>Categories</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959";>Order Status</a>
+  <a class="nav-link active" aria-current="page" href="/store/cart/checkout/payment-status/" style="color: #595959";>Order Status</a>
 </li>
-</li>
-<li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Chat with Corgi
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <li><a class="dropdown-item" href="#">littlecorgi Store</a></li>
-    <li><a class="dropdown-item" href="#">bokbok Store</a></li>
-    <li><a class="dropdown-item" href="#">Puppy Store</a></li>
-  </ul>
-</li>
-
 {% endblock %}
+
 {% block right-nav%}
 <form class="d-flex" role="search" action="{% url 'search' %}">
   <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search" >
   <button class="btn btn-outline-success" type="submit" style="color: #f8bc63; border-color: #f8bc63;">Search</button>
 </form>
-
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>Cart</a>
 </li>
-
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959";>My Profile</a>
+  <a class="nav-link active" aria-current="page" href="/store/edit_profile/" style="color: #595959";>My Profile</a>
 </li>
 {% endblock %}
 
@@ -42,15 +30,15 @@
 <ul>
   <div class="row row-cols-1 row-cols-md-4 g-4">
     {% for product in products %}
-  <div class="col">
-  <div class="card" style="width: 18rem; padding:10px; border:0px;">
-    {% if product.image %}
-    <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
-    {% else %}
-      <p>No image available</p>
+    <div class="col">
+      <div class="card" style="width: 18rem; padding:10px; border:0px;">
+        {% if product.image %}
+          <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
+        {% else %}
+          <p>No image available</p>
     {% endif %}
-    <div class="card-body">
-      <h2 class="card-title">{{ product.name }}</h2>
+  <div class="card-body">
+    <h2 class="card-title">{{ product.name }}</h2>
       <ul class="list-group list-group-flush">
       <li class="list-group-item"><h5>        
         {% if product.category %}
@@ -71,7 +59,7 @@
       </li>
       </ul>
       <a class="stretched-link" href="/store/products/{{ product.id }}"></a>
-    </div>
+      </div>
     </div>
   </div>
   {% endfor %}
