--- a/corgi/buyer/templates/chat.html
+++ b/corgi/buyer/templates/chat.html
@@ -1,4 +1,5 @@
 {% extends "homepage.html" %}
+
 {% block nav %}
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
@@ -7,33 +8,20 @@
   <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959";>Categories</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Order Status</a>
+  <a class="nav-link active" aria-current="page" href="/store/cart/checkout/payment-status/" style="color: #595959";>Order Status</a>
 </li>
-
-<li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Chat with Corgi
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <li><a class="dropdown-item" href="#">littlecorgi Store</a></li>
-    <li><a class="dropdown-item" href="#">bokbok Store</a></li>
-    <li><a class="dropdown-item" href="#">Puppy Store</a></li>
-  </ul>
-</li>
-
 {% endblock %}
+
 {% block right-nav%}
 <form class="d-flex" role="search" action="{% url 'search' %}">
   <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search" >
-  <button class="btn btn-outline-success" type="submit" >Search</button>
+  <button class="btn btn-outline-success" type="submit" style="color: #f8bc63; border-color: #f8bc63;">Search</button>
 </form>
-
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>cart</a>
+  <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>Cart</a>
 </li>
-
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959";>login</a>
+  <a class="nav-link active" aria-current="page" href="/store/edit_profile/" style="color: #595959";>My Profile</a>
 </li>
 {% endblock %}
 
